# stickyNotesJonasSally

./: CMakeLists.txt  NotesRepo.c  README.md  _notes.db  database.db  main.c  notes.db  setup.bat  setup_notes.db.sql  testdata_notes.db
